# adaptshot

./: .gitignore  02-day-02-augmentation-and-feedback-ui.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: augmentation.yaml  baseline.yaml  continual.yaml  day3_bridge.json
docs/: LEARNING_JOURNAL.md  METHODOLOGY.md  RESEARCH_REPORT.md
notebooks/: 01-day-01-fewshot-baseline-and-uncertainty.ipynb  03-day-03-embeddings-and-active-learning.ipynb
results/logs/: day2_logs.json
src/evaluation/: metrics.py
src/models/: network.py
src/training/: trainer.py
src/ui/: app.py
tests/: conftest.py  test_data.py  test_models.py  test_training.py
